# mathpressor

./: .gitignore  README.md  build.zig
bench/: .gitignore  CM-UNCAP-AND-DICT.md  REPORT.md  RUNBOOK.md  STRUCTURED-DATA-RESULTS.md  baselines.csv  bursttest.sh  dict-chunk-study.py  loadtest.sh  run-baselines.sh  scenario.sh  structured-bench.py  structured-gen.py  text-corpus-baselines.csv  verify-lossless.sh
bench/mangohud/: FPSChess-Win64-Shipping_2026-06-13_18-39-15.csv  FPSChess-Win64-Shipping_2026-06-13_20-45-07.csv  FPSChess-Win64-Shipping_2026-06-13_21-29-52.csv  FPSChess-Win64-Shipping_2026-06-13_22-18-54.csv  FPSChess-Win64-Shipping_2026-06-13_22-19-51.csv  explorer_2026-06-13_18-46-51_summary.csv
bench/run-fuse/: summary.txt
bench/run-native/: summary.txt
docs/: DISCOVERIES.md  JOURNEY.md
examples/: cave.mpc  demo.mpc  detail.mpc  diffuse.mpc  marble.mpc  mossy.mpc
gui/: Cargo.toml  build.rs
gui/src/: main.rs
gui/ui/: appwindow.slint
src/: abi.zig  bcj2.zig  cm.zig  concread.zig  container.zig  gip_interface.zig  lzma_enc.zig  main.zig  math_gen.zig  mathfs.zig  translator.zig  vfs_runner.zig  vm.zig  x64.zig
